# quma

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  AUTHORS  CHANGES.rst  LICENSE  LICENSE.rst  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: carrier.rst  changeling.rst  conf.py  connecting.rst  firststeps.rst  import.rst  index.rst  install.rst  namespaces.rst  parameters.rst  pool.rst  query.rst  result.rst  shadowing.rst  templates.rst  tests.rst  toc.rst  usage.rst
docs/_static/: custom.css
quma/: __init__.py  conn.py  connection.py  core.py  cursor.py  database.py  db.py  exc.py  mapper.py  namespace.py  pool.py  query.py  result.py  script.py
quma/provider/: mysql.py  postgresql.py  sqlite.py
quma/tests/: conftest.py  pg.py  test_conn.py  test_connection.py  test_db.py  test_mysql.py  test_pool.py  test_postgres.py  util.py
quma/tests/fixtures/queries/pyformat/users/: add.sql  all.sql  by_name.sql  none.sql
quma/tests/fixtures/queries/qmark/: __init__.py  get_city.sql
quma/tests/fixtures/queries/qmark/addresses/: by_zip.sql
quma/tests/fixtures/queries/qmark/users/: __init__.py  add.sql  by_email.sql  by_name.sql  by_name_tmpl.msql  remove.sql
quma/tests/fixtures/queries/qmark_shadow/: get_city.sql
quma/tests/fixtures/queries/qmark_shadow/addresses/: get_tree.sql
quma/tests/fixtures/queries/users/: __init__.py  add.sql  by_name_pg.sql
quma/tests/fixtures/scripts/pyformat/users/: __init__.py  add.sql  all.sql  by_city.sql  by_email.sql  by_name.sql  mysql_prepare.sql  pgsql_prepare.sql  remove.sql  update.sql
quma/tests/fixtures/scripts/qmark/: __init__.py
quma/tests/fixtures/scripts/qmark/users/: __init__.py  add.sql  by_city.sql  by_name.sql  by_name_tmpl.msql  get_test.sql
quma/tests/fixtures/scripts/qmark/users/include/: macros.msql
quma/tests/fixtures/scripts/qmark_shadow/: __init__.py  get_trees.sql
quma/tests/fixtures/scripts/qmark_shadow/addresses/: by_zip.sql
