[metadata]
license_file = LICENSE
[aliases]
test = pytest

[tool:pytest]
addopts = --verbose -s
markers =
    mysql
    postgres

[flake8]
max-line-length = 79
select = C90 E F W Q0
ignore = W503
inline-quotes = '
multiline-quotes = """
docstring-quotes = """

[isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = 1
force_grid_wrap = 2

[coverage:run]
include = quma/*
omit = quma/tests/*

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    except ImportError
