[metadata]
license_file = LICENSE

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose -s
markers =
    mysql
    postgres

[flake8]
max-line-length = 79
select = C90 E F W Q0
ignore = W503
inline-quotes = '
multiline-quotes = """
docstring-quotes = """

[isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = 1
force_grid_wrap = 2

[coverage:run]
plugins =
    coverage_conditional_plugin
include = quma/*

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no-cover
    raise NotImplementedError
    except ImportError

[coverage:coverage_conditional_plugin]
rules =
    "implementation_name == 'pypy'": no-cov-pypy
    "implementation_name == 'cpython'": no-cov-cpython
